--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "packageManager": "npm@10.2.4",
   "keywords": [],
   "author": "",
   "license": "ISC",
